--- a/appl/FreeRTOS/Librepilot/meson.build
+++ b/appl/FreeRTOS/Librepilot/meson.build
@@ -183,10 +183,6 @@ foreach application_prefix: ['librepilot', 'librepilot_mock']
       lib_freertos_ll_targets += librepilot_compile.process(src_file)
     endforeach
 
-    o_target = custom_target(name_prefix + '.o',
-                             input : app_aramodified_ll,
-                             output : name_prefix + '.ll.o',
-                             command : llc_cmd)
 
     os_ll_target = custom_target(name_prefix + '-os.cc.ll',
                                  input : os_target,
@@ -202,87 +198,64 @@ foreach application_prefix: ['librepilot', 'librepilot_mock']
                                    lib_freertos_ll_targets],
                            output: name_prefix + '-os_app.ll',
                            command: llvm_link_cmd)
-
-    lto_app_os = custom_target(name_prefix + '-lto_app_os.ll',
-                               input: app_os,
-                               output: name_prefix + '-lto_os_app.ll',
-                               command: llvm_opt_cmd + ['-Os'])
-
-    lto_o = custom_target(name_prefix + '-lto_app_os.o',
-                          input: lto_app_os,
-                          output: name_prefix + '-lto_os_app.ll.o',
-                          command: llc_cmd)
-
-    lto_elf = custom_target(name_prefix + '.lto.elf',
-                            input: [lto_o,
-                                    # os_target[1], # startup.s
-                                    files('flight/pios/stm32f10x/startup_stm32f10x_MD_CC.S'),
-                                    libsra_ar,
-                                   ],
-                            output: name_prefix + '.lto.elf',
-                            depfile: name_prefix + '.lto.elf.dep',
-                            command: clang_cpp +
-                                     librepilot_includes +
-                                     ld_flags +
-                                     librepilot_ldflags +
-                                     clang_flags,
-                            depend_files: [files(meson.current_source_dir() / 'flight/pios/stm32f10x//link_STM32103CB_CC_Rev1_memory.ld',
-                                                 meson.current_source_dir() /'flight/pios/stm32f10x//link_STM32103CB_CC_Rev1_sections.ld',
-                                                )
-                                          ],
-                           )
-
-    elf_target = custom_target(name_prefix + '.elf',
-                               input: [o_target,
-                                       os_target[0],
-                                       files('flight/pios/stm32f10x/startup_stm32f10x_MD_CC.S'),
-                                       lib_freertos_ll_targets,
-                                       libsra_ar,
-                                      ],
-                               output: name_prefix + '.elf',
-                               depfile: name_prefix + '.elf.dep',
-                               command: clang_cpp +
-                                        librepilot_includes +
-                                        ld_flags +
-                                        librepilot_ldflags +
-                                        clang_flags,
-                               depend_files: [files(meson.current_source_dir() / 'flight/pios/stm32f10x/link_STM32103CB_CC_Rev1_memory.ld',
-                                                    meson.current_source_dir() / 'flight/pios/stm32f10x/link_STM32103CB_CC_Rev1_sections.ld',
-                                                   )
-                                             ],
-                              )
-
-    bin_target = custom_target(name_prefix + '.bin',
-                               input: [elf_target],
-                               output: name_prefix + '.bin',
+    
+    foreach lto_version : ['none', 'standard', 'rle', 'rle2']
+      lto_prefix = name_prefix + '-' + lto_version
+      lto_app_os = custom_target(lto_prefix + '-app_os.ll',
+                                 input: app_os,
+                                 depends: [sparse_rle, sparse_rle2],
+                                 output: lto_prefix + '-os_app.ll',
+                                 command: get_variable('llvm_lto_cmd_' + lto_version))
+      # -Os ? könnte platzprobleme geben
+      
+      lto_o = custom_target(lto_prefix + '-app_os.o',
+                            input: lto_app_os,
+                            output: lto_prefix + '-os_app.ll.o',
+                            command: llc_cmd)
+      
+      lto_elf = custom_target(lto_prefix + '.elf',
+                              input: [lto_o,
+                                      #os_target[1], # startup.s
+                                      files('flight/pios/stm32f10x/startup_stm32f10x_MD_CC.S'),
+                                      libsra_ar,
+                                      # get_variable('libfreertos_' + target)
+                                     ],
+                              output: lto_prefix + '.elf',
+                              depfile: lto_prefix + '.elf.dep',
+                              depend_files: default_linkerscript,
+                              command: clang_cpp +
+                                       librepilot_includes +
+                                       ld_flags +
+                                       librepilot_ldflags +
+                                       clang_flags,
+                              depend_files: [files(meson.current_source_dir() / 'flight/pios/stm32f10x//link_STM32103CB_CC_Rev1_memory.ld',
+                                                   meson.current_source_dir() /'flight/pios/stm32f10x//link_STM32103CB_CC_Rev1_sections.ld',
+                                                  )
+                                            ],
+                             )
+      
+    bin_target = custom_target(lto_prefix + '.bin',
+                               input: [lto_elf],
+                               output: lto_prefix + '.bin',
                                command: objcopy_cmd)
-
-    lto_bin_target = custom_target(name_prefix + '.lto.bin',
-                                   input: [lto_elf],
-                                   output: name_prefix + '.lto.bin',
-                                   command: objcopy_cmd)
-
-    run_target('flash_' + name_prefix, command: ['st-flash', 'write', bin_target, '0x8000000'])
-    run_target('flash_' + name_prefix + '.lto', command: ['st-flash', 'write', lto_bin_target, '0x8000000'])
-    run_target('size_' + name_prefix, command: [size, elf_target])
-    run_target('size_' + name_prefix + '.lto', command: [size, lto_elf])
-    run_target('run_gdb_hw_' + name_prefix, command: [gdb_hw_script, elf_target])
-    run_target('run_qemu_' + name_prefix, command: [qemu_cmd, elf_target])
-    run_target('run_gdb_qemu_' + name_prefix, command: [gdb_qemu_cmd, elf_target])
-    run_target('run_qemu_' + name_prefix + '-lto', command: [qemu_cmd, lto_elf])
-    run_target('run_gdb_qemu_' + name_prefix + '-lto', command: [gdb_qemu_cmd, lto_elf])
-    elf_targets += elf_target
+    
+    
+    run_target('flash_' + lto_prefix, command: ['st-flash', 'write', bin_target, '0x8000000'])
+    run_target('size_' + lto_prefix, command: [size, lto_elf])
+    run_target('run_gdb_hw_' + lto_prefix, command: [gdb_hw_script, lto_elf])
+    run_target('run_qemu_' + lto_prefix, command: [qemu_cmd, lto_elf])
+    run_target('run_gdb_qemu_' + lto_prefix, command: [gdb_qemu_cmd, lto_elf])
     elf_targets += lto_elf
-    named_elf_targets += [t, elf_target]
-    named_elf_targets += [t+'.lto', lto_elf]
-    named_plain_elf_targets += [t, elf_target]
-    named_lto_elf_targets += [t+'.lto', lto_elf]
-
+    named_elf_targets += [target + '-' + lto_version, lto_elf]
+    profiles_list += ['--profiles', target + '-' + lto_version]
+    
+    
+    
     if get_option('enable_librepilot_tests')
       if t in ['instances_full_static', 'instances_full_initialized', 'vanilla']
         test_elf = 'nop'
       else
-        test_elf = elf_target
+        test_elf = lto_elf
       endif
       test('run_qemu_' + name_prefix,
            py3_inst,
@@ -297,21 +270,40 @@ foreach application_prefix: ['librepilot', 'librepilot_mock']
            is_parallel: false,
           )
     endif
+    endforeach # lto_verison
 
 
-  endforeach
+  endforeach # ara specialization
+
+
+
+
 
   run_target('compare_nm-' + application_prefix, command: [compare_nm, nm.path(), named_elf_targets])
-  run_target('compare_nm-' + application_prefix + '-plain', command: [compare_nm, nm.path(), named_plain_elf_targets])
-  run_target('compare_nm-' + application_prefix + '-lto', command: [compare_nm, nm.path(), named_lto_elf_targets])
   run_target('compare_size-' + application_prefix, command: [size, elf_targets])
   run_target('compare_time-' + application_prefix, command: [compare_time, meson.build_root(), 'librepilot'], depends: elf_targets)
-  # custom_target('analyze-librepilot',
-  #               command: [files('LibrepilotExperiment.py'), '-d', meson.current_build_dir(),
-  #                         '-s',
-  #                         '--run-dir', meson.build_root()],
-  #               output: ['librepilot_result.dref',
-  #                        'librepilot_raw.dref'],
-  #               console: true,
-  #               depends: elf_targets)
+  timing_exp_result = custom_target('analyze_timing-' + application_prefix,
+                                    command: [GenericTimingExperiment, '-d', meson.current_build_dir(),
+                                              '-s',
+                                              '--title', application_prefix,
+                                              profiles_list,
+                                              '--run-dir', meson.build_root()],
+                                    output: ['timing_result-' + application_prefix + '.dref',
+                                             'timing_result_raw-' + application_prefix + '.dref'],
+                                    console: true,
+                                    depends: elf_targets)
+  
+  run_target('show-timing_result-' + application_prefix + '.dref',
+             command: [#'strace',
+               ShowGenericTimingExperiment,
+               profiles_list,
+               '--title', application_prefix,],
+             depends: timing_exp_result,
+            )
+  run_target('show_old-timing_result-' + application_prefix + '.dref',
+             command: [#'strace',
+               ShowGenericTimingExperiment,
+               profiles_list,
+             '--title', application_prefix,],
+            )
 endforeach
