C++ graph: lightweight os interface

--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -6,7 +6,7 @@ graph_inc = include_directories('.')
 graph_data_pyx = custom_target('graph_data_pyx',
   output: ['graph_data_pyx.cpp', 'graph_data_pyx.h'],
   input: files('graph_data.pyx'),
-  depend_files: files('graph_data.pxd', 'arguments.pxd'),
+  depend_files: files('cgraph.pxd', 'graph_data.pxd', 'arguments.pxd', 'os.pxd'),
   command: [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '@INPUT@', '-o', '@OUTPUT0@'] + cython_flags,
 )
 graph_data_pyx_header = graph_data_pyx[1]
@@ -17,6 +17,7 @@ graph_data_mod = py3_inst.extension_module('graph_data',
   'graph.cpp',
   'arguments.cpp',
   'mix.cpp',
+  'os.cpp',
   dependencies: [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep, svf_dep]
 )
 graph_data_dir = meson.current_build_dir()
