--- a/meson.build
+++ b/meson.build
@@ -133,7 +133,7 @@ if get_option('enable_toplevel_tests')
     test('ara_tester',
        py3_inst,
        args: [ara_py, gpslogger_application,
-              '--log-level', 'warn', '--runtime-stats', '--runtime-stats-file', 'dump', '--runtime-stats-format', 'json',
+              '--log-level', 'info', '--runtime-stats', '--runtime-stats-file', 'dump', '--runtime-stats-format', 'json',
               '--step-settings', extra_settings],
        suite: 'toplevel'
     )
