librepilot: allow in-code unrolling of MODULE_*_ALL macros
normally, the targets are collected by the linker.
For debug and development purpose, the switch
-DARA_MOCK_UNROLL_MODINIT=1 in meson.build may be used to manually
unroll/hardcode the call logic.

--- a/appl/FreeRTOS/Librepilot/meson.build
+++ b/appl/FreeRTOS/Librepilot/meson.build
@@ -58,6 +58,7 @@ librepilot_cflags = [
 '-DBL_BANK_SIZE=0x00003000',
 '-DBL_DESC_SIZE=',
 '-mllvm', '-inline-threshold=2',
+# '-DARA_MOCK_UNROLL_MODINIT=1', # uncomment to 'unroll' the MODULE_INITIALISE_ALL loops in src code
 ]
 
 
