generator: allow queues to stay unspecialized

--- a/appl/FreeRTOS/Librepilot/meson.build
+++ b/appl/FreeRTOS/Librepilot/meson.build
@@ -59,6 +59,7 @@ librepilot_cflags = [
 '-DBL_DESC_SIZE=',
 '-mllvm', '-inline-threshold=2',
 # '-DARA_MOCK_UNROLL_MODINIT=1', # uncomment to 'unroll' the MODULE_INITIALISE_ALL loops in src code
+'-DconfigINCLUDE_ALL_DECLS=1',
 ]
 
 
