--- a/appl/meson.build
+++ b/appl/meson.build
@@ -45,6 +45,7 @@ ir_apps = [
 
 # these apps are meant to run on real hardware and are compiled into an elf
 hw_apps = [
+  'rtas20_example',
   'simple_print',
   'simple_delay',
   'simple_queue_send',
