SSE: detect loops seperately, fix condition detection

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -18,6 +18,7 @@ ir_apps = [
   'abb_merge',
   'argument_load',
   'c',
+  'condition',
   'critical_region_detection',
   'deadlock',
   'dominator',
